--- a/web/angular/src/app/dialog/create-task/create-task.component.html
+++ b/web/angular/src/app/dialog/create-task/create-task.component.html
@@ -1,3 +1,30 @@
-<p>
-  create-task works!
-</p>
+<form [formGroup]="createForm" (ngSubmit)="save()">
+
+  <div mat-dialog-title> New Task</div>
+  <div mat-dialog-content>
+    <mat-form-field appearance="outline">
+      <mat-label>Task</mat-label>
+      <input matInput placeholder="Title" formControlName="task">
+      <mat-error>In required</mat-error>
+
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+       <mat-label>Description</mat-label>
+       <textarea matInput placeholder="Textarea" formControlName="description"></textarea>
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-select placeholder="Priority" value="1" formControlName="priority">
+      <mat-option value="1">Normal</mat-option>
+      <mat-option value="2">Medium</mat-option>
+      <mat-option value="3">High</mat-option>
+    </mat-select>
+    </mat-form-field>
+  </div>
+
+  <div mat-dialog-actions class="flex-container">
+    <button type="submit" mat-button color="primary" [disabled]="createForm.invalid">Save</button>
+    <button mat-button [mat-dialog-close]="true" color="warn">Close</button>
+  </div>
+</form>
