--- a/web/angular/src/app/dialog/edit-task/edit-task.component.html
+++ b/web/angular/src/app/dialog/edit-task/edit-task.component.html
@@ -1,3 +1,29 @@
-<p>
-  edit-task works!
-</p>
+<form [formGroup]="editForm" (ngSubmit)="update()">
+
+  <div mat-dialog-title> New Task</div>
+  <div mat-dialog-content>
+    <mat-form-field appearance="outline">
+      <mat-label>Task</mat-label>
+      <input matInput placeholder="Title" formControlName="task">
+      <mat-error>In required</mat-error>
+
+    </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+       <mat-label>Description</mat-label>
+       <textarea matInput placeholder="Textarea" formControlName="description"></textarea>
+       <mat-error>In required</mat-error>
+   </mat-form-field>
+    <br />
+    <mat-form-field appearance="outline">
+      <mat-select placeholder="Priority" formControlName="priority">
+        <mat-option *ngFor="let priority of priorities" [value]="priority.value">{{priority.name}}</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
+
+  <div mat-dialog-actions class="flex-container">
+    <button type="submit" mat-button color="primary" [disabled]="editForm.invalid">Update</button>
+    <button mat-button [mat-dialog-close]="true" color="warn">Close</button>
+  </div>
+</form>
