--- a/web/angular/src/styles.scss
+++ b/web/angular/src/styles.scss
@@ -2,3 +2,22 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #1d2a6f;
+    color: white;
+    display: flex;
+    height: 30px;
+    justify-content: center;
+    align-items: center;
+    font-family: Roboto,"Helvetica Neue",sans-serif;
+    font-size: 14px;
+    a {
+        text-decoration: none;
+        color: inherit;
+        font-style: italic;
+    }
+}
